<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearChat"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input2"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="60dp">

            <ImageView
                android:id="@+id/picture1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/image_card"
                tools:ignore="ContentDescription">

            </ImageView>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/card_view"
            android:text="@string/alex_jones"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">


        </TextView>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alex"
            android:layout_marginStart="100dp"
            android:text="@string/sure_i_ll_pick_you_up"
            android:textColor="#989696"
            android:textSize="15sp"

            tools:ignore="TextContrastCheck">

        </TextView>

        <TextView
            android:id="@+id/today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="55dp"
            android:layout_toEndOf="@+id/description"
            android:text="@string/today_12_26"
            android:textColor="#989696"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck">


        </TextView>


    </RelativeLayout>

</LinearLayout>